<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:focusable="false"
    android:focusableInTouchMode="false"
    tools:context="com.prodevteam.tastebud.MenuScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Restaurant Name"
            android:id="@+id/rest_name"
            android:gravity="left"
            android:layout_marginLeft="@dimen/menu_text_margin_small"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="Back"
            android:fontFamily="sans"
            android:background="@null"
            android:alpha="0.4"
            android:id="@+id/back_button"
            android:layout_marginRight="4dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <ImageButton
            android:layout_height="48dp"
            android:layout_width="20dp"
            android:id="@+id/back_image_button"
            android:layout_centerVertical="true"
            android:background="@null"
            android:alpha="0.4"
            android:src="@drawable/arrow4"
            android:scaleType="fitCenter"
            android:layout_toLeftOf="@id/back_button"/>
        <View
            android:layout_width="2dp"
            android:layout_height="34dp"
            android:background="#ffffff"
            android:id="@+id/horizontal_line3"
            android:alpha="0.3"
            android:layout_centerVertical="true"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@id/back_image_button"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_upper_bar_1_height"
        android:id="@+id/menu_upper_bar_1"
        android:layout_gravity="center_horizontal"
        android:background="@color/menu_upper_bar_1_color"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/menu_ing_1"
            android:id="@+id/menu_ingredient_string"
            android:layout_marginLeft="@dimen/menu_text_margin"
            android:layout_marginTop="@dimen/menu_text_margin"
            android:textSize="12sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient_field"
            android:inputType="text"
            android:ems="11"
            android:maxEms="11"
            android:textSize="12sp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/menu_text_margin_small"
            android:layout_toRightOf="@+id/menu_ingredient_string"
            android:layout_toEndOf="@+id/menu_ingredient_string" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:scaleType="fitCenter"
            android:background="@drawable/red_x"
            android:id="@+id/no_button"
            android:layout_marginRight="@dimen/menu_text_margin"
            android:layout_marginTop="@dimen/menu_button_top_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="@dimen/menu_text_margin"
            android:scaleType="fitCenter"
            android:background="@drawable/green_check"
            android:id="@+id/yes_button"
            android:layout_alignBottom="@+id/no_button"
            android:layout_toLeftOf="@+id/no_button"
            android:layout_toStartOf="@+id/no_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff"
            android:id="@+id/horizontal_line"
            android:alpha="0.2"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:id="@+id/ing_list"
            android:layout_below="@+id/horizontal_line"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="@dimen/menu_text_margin_small"
            android:layout_marginLeft="@dimen/menu_text_margin_small"
            android:scrollbarStyle="insideOverlay"
            android:scrollbarSize="@dimen/menu_scrollbar_size">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ing_wrapper"
                android:layout_gravity="center_vertical"></LinearLayout>
        </HorizontalScrollView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/menu_scrollview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/menu_wrapper">

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/order_button"
        android:background="@drawable/order_button"
        android:scaleType="centerCrop"
        android:paddingRight="2dp"
        android:id="@+id/order_button"
        />

</LinearLayout>