...
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/linearLayout"
        android:layout_marginTop="113dp"
        android:layout_below="@+id/rest_selector"
        android:layout_alignRight="@+id/rest_selector"
        android:layout_alignEnd="@+id/rest_selector">

    </LinearLayout>

    <Button
...

    <Button
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:text="@string/rec_button"
        android:id="@+id/rec_button"
        android:layout_below="@+id/menu_button"
        android:layout_alignLeft="@+id/rest_selector"
        android:layout_toLeftOf="@+id/linearLayout"
        android:layout_toStartOf="@+id/linearLayout" />

    <Button
        android:layout_width="319dp"
...
