...

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue"
            android:layout_alignParentRight="true"
            android:id="@+id/order_finished_button" />
    </RelativeLayout>
</LinearLayout>
