<resources>
    <string name="app_name">TasteBuddy</string>
    <string name="action_settings">Settings</string>

    <!-- Login Screen Activity -->
    <string name="email_prompt">E-mail Address</string>
    <string name="pass_prompt">Password</string>
    <string name="logo_description">TasteBuddy Logo</string>
    <string name="login_string">Sign in</string>
    <string name="register_string">Create Account</string>
    <string name="login_bg">Background for login screen</string>
    <string name="login_bg2">Background for login screen</string>

    <!-- Post Login Activity -->
    <string name="diet_button">My Account</string>
    <string name="title_activity_post_login">Post Login</string>
    <string name="menu_button">Browse Menu</string>
    <string name="rec_button">View Recommendations</string>
    <string name="greeting_morning">Good morning,</string>
    <string name="greeting_afternoon">Good afternoon,</string>
    <string name="greeting_evening">Good evening,</string>
    <string name="post_login_bg">Background image for post login screen</string>
    <string name="signout_text">Log out</string>

    <!-- Menu Screen Activity -->
    <string name="title_activity_menu_screen">MenuScreen</string>
    <string name="menu_ing_1">Enter an ingredient:</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="menu_item_1_name">Chicken Fried Rice</string>
    <string name="menu_item_1_price">$6.99</string>
    <string name="menu_item_1_ing">white rice, chicken, eggs, onions, peas, carrots, celery, bacon</string>
    <string name="title_activity_account_settings_screen">Settings</string>
    <string name="my_acc_string">My Account</string>

    <string name="email_name">byzhong@ucsd.edu</string>
    <string name="email_pass">123456</string>

    <string name="Continue">Confirm Order</string>
    <string name="CreateAnAccount">Create an Account</string>
    <string name="password_field">Password:</string>
    <string name="email_field">Email Address:</string>
    <string name="name_field">Name:</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>

</resources>
