...
        android:gravity="center"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_prompt"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/pass_field"
        android:layout_alignStart="@+id/pass_field"
        android:background="#d52706"
        android:fontFamily="sans-serif"
        android:textColor="#ffffff"
        android:text="@string/email_name"
        android:textColorHint="@color/login_hint_color"
...

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_string"
        android:id="@+id/signin_button"
        android:layout_gravity="center"
        android:layout_below="@+id/pass_field"
        android:layout_alignRight="@+id/pass_field"
        android:layout_alignLeft="@+id/pass_field"
        android:layout_alignStart="@+id/pass_field" />
    <Button
...
